retrieveUnpackaged/objects/NOFA_Member__c.object
<CustomObject>
    <fields>
        <fullName>NOFA_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFA Group</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipLabel>NOFA Member</relationshipLabel>
        <relationshipName>NOFA_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA_Name__c</fullName>
        <formula>NOFA__r.NOFA_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFA</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>NOFA Member</relationshipLabel>
        <relationshipName>NOFA_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NOFA Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NOFA Member{0000}</displayFormat>
        <label>NOFA Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NOFA Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Is_Fiscal_Yr_Same</fullName>
        <active>false</active>
        <errorConditionFormula>False</errorConditionFormula>
        <errorDisplayField>NOFA__c</errorDisplayField>
        <errorMessage>Fiscal Yr on Nofa group is not same as on Nofa Fiscal Yr</errorMessage>
    </validationRules>
</CustomObject>